# kinemouse

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: lint.yml  tests.yml
docs/: ARCHITECTURE.md  SETUP.md
examples/: record_session.py  run_demo.py
kinemouse/: __init__.py
kinemouse/backends/: __init__.py  base_backend.py  linux_wayland_backend.py  linux_x11_backend.py  macos_backend.py  scroll_mixin.py  windows_backend.py
kinemouse/state/: __init__.py  events.py  gesture_classifier.py  gesture_fsm.py  gesture_history.py  scroll_gesture.py  sensitivity.py
kinemouse/utils/: __init__.py  calibration.py  config.py  config_io.py  constants.py  fps_counter.py  gesture_config_loader.py  hotkeys.py  logger.py  math_utils.py  multi_monitor.py  permissions.py  profile_monitor.py  screen_info.py  tray_icon.py
kinemouse/vision/: __init__.py  frame_annotator.py  hand_tracker.py  multi_hand_tracker.py
tests/: test_events.py  test_fps_counter.py  test_gesture_classifier.py  test_gesture_fsm.py  test_math_utils.py  test_multi_monitor.py  test_scroll_gesture.py
tools/: replay_session.py
